--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: David Aaronson
 subtitle:
-description: 小小程序员的成长之路
+description: 在浮躁的社会中,我携书本同行
 keywords:
 author: David Aaronson
 language: zh-Hans
