--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -305,6 +305,7 @@ font:
   enable: false
 
   # Uri of fonts host. E.g. //fonts.googleapis.com (Default).
+  #host: //fonts.lug.ustc.edu.cn
   host: //fonts.lug.ustc.edu.cn
 
   # Font options:
