提交新文章

--- a/_config.yml
+++ b/_config.yml
@@ -85,5 +85,5 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/xiaoybboy/xiaoybboy.github.io
+  repo: git@github.com:xiaoybboy/xiaoybboy.github.io.git
   branch: master
