--- a/_config.yml
+++ b/_config.yml
@@ -95,6 +95,11 @@ exclude:
 ignore:
 
 # Extensions
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: next
